test/users/ssridhar/atomic/errors/test_fail_atomic_write.chpl
atomic write("This should fail");